fix: overflow header hidden

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -22,6 +22,7 @@ header
   position: relative
   display: flex
   justify-content: center
+  overflow-x: hidden
 
   
   .shape
